--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,11 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: dependencies
-        run: npm install
+      - name: Use Node.js
+        uses: actions/setup-node@v1.4.2
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org
       
       - name: Publish to NPM
         run: npm publish || true
