--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,12 @@ jobs:
           fetch-depth: 1
 
       - name: Use Node.js
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 14
           registry-url: https://registry.npmjs.org
+          
+      - run: npm install
       
       - name: Publish to NPM
         run: npm publish || true
