--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,32 @@
-name: Next release
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+
+name: Node.js Package
 
 on:
-  push:
-    branches: [ release ]
-  pull_request:
-    branches: [ release ]
+  release:
+    types: [created]
 
 jobs:
-  publish-to-npm:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout release branch code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          fetch-depth: 1
+          node-version: 16
+      - run: npm ci
 
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org
-          
-      - run: npm install
-      
-      - name: Publish to NPM
-        run: npm publish || true
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
